[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem-mesh"
version = "0.1.0"
description = "Universal AI memory layer — one persistent memory for all your AI tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

[project.scripts]
mem-mesh = "mem_mesh.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mem_mesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/mem_mesh --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.coverage.run]
source = ["src/mem_mesh"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true

[project.urls]
Homepage = "https://github.com/LakshmiSravyaVedantham/mem-mesh"
Repository = "https://github.com/LakshmiSravyaVedantham/mem-mesh"
"Bug Tracker" = "https://github.com/LakshmiSravyaVedantham/mem-mesh/issues"
